syntax = "proto3";

package yandex.cloud.events.mdb.clickhouse;

import "google/rpc/status.proto";

import "yandex/cloud/events/common.proto";
import "yandex/cloud/events/options.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/mdb/clickhouse;clickhouse";
option java_package = "yandex.cloud.api.events.mdb.clickhouse";

message CreateMlModel {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  EventDetails details = 6 [(required) = true];

  google.rpc.Status error = 7;
  reserved 8; //  RequestParameters request_parameters = 8;
  events.Response response = 9;

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    DONE = 2;
    ERROR = 3;
  }

  message EventDetails {
    string cluster_id = 1 [(required) = true];
    string ml_model_name = 2 [(required) = true];
  }
}

message UpdateMlModel {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  EventDetails details = 6 [(required) = true];

  google.rpc.Status error = 7;
  reserved 8; //  RequestParameters request_parameters = 8;
  events.Response response = 9;

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    DONE = 2;
    ERROR = 3;
  }

  message EventDetails {
    string cluster_id = 1 [(required) = true];
    string ml_model_name = 2 [(required) = true];
  }
}

message DeleteMlModel {
  option (include) = true;

  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  EventStatus event_status = 5 [(required) = true];
  EventDetails details = 6 [(required) = true];

  google.rpc.Status error = 7;
  reserved 8; //  RequestParameters request_parameters = 8;
  events.Response response = 9;

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    DONE = 2;
    ERROR = 3;
  }

  message EventDetails {
    string cluster_id = 1 [(required) = true];
    string ml_model_name = 2 [(required) = true];
  }
}
