syntax = "proto3";

package yandex.cloud.events.serverless.mdbproxy;

import "google/protobuf/field_mask.proto";
import "google/rpc/status.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/serverless/mdbproxy;mdbproxy";
option java_package = "yandex.cloud.api.events.serverless.mdbproxy";
option java_outer_classname = "MDBProxyEvents";

message CreateProxy {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  ProxyEventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message RequestParameters {
    string folder_id = 1 [(required) = true];
    string name = 2;
    map<string, string> labels = 4;
    Target target = 5;
  }
}

message UpdateProxy {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  ProxyEventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message RequestParameters {
    string proxy_id = 1 [(required) = true];
    string name = 2;
    map<string, string> labels = 4;
    Target target = 5;
    google.protobuf.FieldMask update_mask = 6;
  }
}

message DeleteProxy {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  ProxyEventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8;
  events.Response response = 9;

  message RequestParameters {
    string proxy_id = 1 [(required) = true];
  }
}

message SetProxyAccessBindings {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  events.Response response = 9 [(required) = true];

  message EventDetails {
    string proxy_id = 1 [(required) = true];
    string proxy_name = 2;
    string proxy_status = 3 [(required) = true];
    repeated access.AccessBinding access_bindings = 4;
    repeated access.AccessBindingDelta access_binding_deltas = 5;
  }
  message RequestParameters {
    string proxy_id = 1 [(required) = true];
    repeated access.AccessBinding access_bindings = 2;
  }
}

message UpdateProxyAccessBindings {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];

  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];

  events.EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;

  EventDetails details = 7 [(required) = true];
  RequestParameters request_parameters = 8 [(required) = true];
  events.Response response = 9 [(required) = true];

  message EventDetails {
    string proxy_id = 1 [(required) = true];
    string proxy_name = 2;
    string proxy_status = 3 [(required) = true];
    repeated access.AccessBinding access_bindings = 4;
    repeated access.AccessBindingDelta access_binding_deltas = 5;
  }
  message RequestParameters {
    string proxy_id = 1 [(required) = true];
    repeated access.AccessBindingDelta access_binding_deltas = 2;
  }
}

message ProxyEventDetails {
  string proxy_id = 1 [(required) = true];
  string proxy_name = 2;
  string proxy_status = 3;
  map<string, string> labels = 5;
  Target target = 6;
}

message Target {
  oneof mdb {
    ClickHouse clickhouse = 1;
    PostgreSQL postgresql = 2;
  }

  message PostgreSQL {
    string cluster_id = 1;
    string user = 2;
    string db = 4;
    string endpoint = 5;
  }

  message ClickHouse {
    string cluster_id = 1;
    string user = 2;
    string db = 4;
    string endpoint = 5;
  }
}
